k8s/apps/multimedia/jackett/namespace.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jackett
  labels:
    routed-gateway: "true"
    pod-security.kubernetes.io/enforce: privileged
