k8s/apps/multimedia/jackett/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: jackett
  labels:
    app.kubernetes.io/name: jackett
    app.kubernetes.io/instance: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jackett
      app.kubernetes.io/instance: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jackett
        app.kubernetes.io/instance: jackett
    spec:
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:latest
          ports:
            - name: http
              containerPort: 9117
              protocol: TCP
          volumeMounts:
            - name: jackett-config
              mountPath: /config
            - name: jackett-data
              mountPath: /data
      volumes:
        - name: jackett-config
          emptyDir: {}
        - name: jackett-data
          emptyDir: {}
