k8s/apps/multimedia/jackett/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: jackett
  labels:
    app.kubernetes.io/name: jackett
    app.kubernetes.io/instance: jackett
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jackett
    app.kubernetes.io/instance: jackett
  ports:
    - name: http
      port: 9117
      targetPort: 9117
      protocol: TCP
