k8s/apps/multimedia/jackett/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: jackett
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jackett"
    gethomepage.dev/group: "Multimedia"
    gethomepage.dev/icon: "jackett"
  labels:
    app.kubernetes.io/name: jackett
    app.kubernetes.io/instance: jackett
spec:
  ingressClassName: internal
  rules:
    - host: jackett.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 9117
